Fix issue where background had whitespace on desktop

--- a/assets/source/scss/main.scss
+++ b/assets/source/scss/main.scss
@@ -188,7 +188,7 @@ body {
   background-repeat: no-repeat, no-repeat;
   background-size: cover, cover;
   background-position: center center, bottom center;
-  /* background-attachment: fixed, fixed; */
+  background-attachment: fixed, fixed;
 }
 
 body:after {
